implemented basic typing and screen update, no logic yet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="screen"></div>
 
             <div class="controls">
-                
+
                 <div class="top-row">
                     <button id="backspace"> Back</button>
                     <button id="clear"> Clear</button>
@@ -24,30 +24,31 @@
 
                 <div class="math-buttons">
                     <div class="numpad">
-                        <button id="num1">7</button>
-                        <button id="num1">8</button>
-                        <button id="num1">9</button>
-                        <button id="num1">4</button>
-                        <button id="num1">5</button>
-                        <button id="num1">6</button>
-                        <button id="num1">1</button>
-                        <button id="num1">2</button>
-                        <button id="num1">3</button>
-                        <button id="num1">.</button>
-                        <button id="num1">0</button>
-                        <button id="num1">.</button>
+                        <button id="num1" class="numButton">7</button>
+                        <button id="num1" class="numButton">8</button>
+                        <button id="num1" class="numButton">9</button>
+                        <button id="num1" class="numButton">4</button>
+                        <button id="num1" class="numButton">5</button>
+                        <button id="num1" class="numButton">6</button>
+                        <button id="num1" class="numButton">1</button>
+                        <button id="num1" class="numButton">2</button>
+                        <button id="num1" class="numButton">3</button>
+                        <button id="num1" class="numButton">.</button>
+                        <button id="num1" class="numButton">0</button>
+                        <button id="num1" class="numButton">.</button>
                     </div>
 
                     <div class="operators">
-                        <button id="add">+</button>
-                        <button id="subtract">-</button>
-                        <button id="multiply"> x </button>
-                        <button id="buttonide"> / </div>
+                        <button class="opButton" id="add">+</button>
+                        <button class="opButton" id="subtract">-</button>
+                        <button class="opButton" id="multiply">x</button>
+                        <button class="opButton" id="divide">/</button>
                     </div>
                 </div>
-
             </div>
+
         </div>
+    </div>
 
     </div>
 </body>
