added backspace functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="all-content">
         <div class="calculator">
 
-            <div class="screen"></div>
+            <div>
+                <p class="screen"></p>
+            </div>
 
             <div class="controls">
 
