Added a separate box to show previous expression, a box for error messages, and various other things

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div class="all-content">
         <div class="calculator">
 
-            <div>
+            <div class="screen-grid">
+                <p class="old-expression"></p>
                 <p class="screen"></p>
+                <p class="dialog-box"></p>
             </div>
 
             <div class="controls">
