minor layout changes

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="calculator">
 
             <div class="screen-grid">
-                <p class="old-expression"></p>
-                <p class="screen"></p>
-                <p class="dialog-box"></p>
+                <div class="old-expression"></div>
+                <div class="screen"></div>
+                <div class="dialog-box"></div>
             </div>
 
             <div class="controls">
 
                 <div class="top-row">
-                    <button id="backspace"> Back</button>
-                    <button id="clear"> Clear</button>
+                    <button id="backspace"><</button>
+                    <button id="clear">C</button>
                     <button id="equals"> = </button>
                 </div>
 
@@ -37,9 +37,9 @@
                         <button id="num1" class="numButton">1</button>
                         <button id="num1" class="numButton">2</button>
                         <button id="num1" class="numButton">3</button>
-                        <button id="num1" class="numButton">.</button>
+                        <button id="num1" class="numButton spacer">.</button>
                         <button id="num1" class="numButton">0</button>
-                        <button id="num1" class="numButton">.</button>
+                        <button id="num1" class="numButton spacer">.</button>
                     </div>
 
                     <div class="operators">
