added fonts and minor bug fixes

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <div class="operators">
                         <button class="opButton realButton" id="add">+</button>
                         <button class="opButton realButton" id="subtract">-</button>
-                        <button class="opButton realButton" id="multiply">x</button>
-                        <button class="opButton realButton" id="divide">/</button>
+                        <button class="opButton realButton" id="multiply">×</button>
+                        <button class="opButton realButton" id="divide">÷</button>
                     </div>
                 </div>
             </div>
