Resolved a minor bug and removed extra code

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 
                 <div class="math-buttons">
                     <div class="numpad">
-                        <button id="num1" class="numButton realButton">7</button>
-                        <button id="num1" class="numButton realButton">8</button>
-                        <button id="num1" class="numButton realButton">9</button>
-                        <button id="num1" class="numButton realButton">4</button>
-                        <button id="num1" class="numButton realButton">5</button>
-                        <button id="num1" class="numButton realButton">6</button>
-                        <button id="num1" class="numButton realButton">1</button>
-                        <button id="num1" class="numButton realButton">2</button>
-                        <button id="num1" class="numButton realButton">3</button>
-                        <button id="num1" class="numButton spacer">.</button>
-                        <button id="num1" class="numButton realButton">0</button>
-                        <button id="num1" class="numButton spacer">.</button>
+                        <button class="realButton">7</button>
+                        <button class=" realButton">8</button>
+                        <button class=" realButton">9</button>
+                        <button class=" realButton">4</button>
+                        <button class=" realButton">5</button>
+                        <button class=" realButton">6</button>
+                        <button class=" realButton">1</button>
+                        <button class=" realButton">2</button>
+                        <button class=" realButton">3</button>
+                        <button class=" spacer">.</button>
+                        <button class=" realButton">0</button>
+                        <button class=" spacer">.</button>
                     </div>
 
                     <div class="operators">
